# boardroom

./: .env.example  .env.prod.example  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  alembic.ini  debug_import.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: BRANCH_PROTECTION.md  CODEOWNERS  WORKFLOWS.md
.github/workflows/: build-and-push.yml  deploy-railway.yml  pr-checks.yml
alembic/: env.py
alembic/versions/: 1e04e15e9cbb_add_performance_tracking_tables.py  395bbc2d5393_change_json_to_jsonb_for_postgresql_.py  4389d3063540_add_first_name_last_name_to_users.py  5f691480b773_add_user_and_portfolio_tables.py  72cb97146dab_initial_schema.py  a9ac28963d31_add_phase_4b_features.py  ab39d61d2eff_add_backtesting_tables.py  cc6231cabf3b_add_alerts_notifications.py  d4e52e30ebd3_remove_user_api_keys.py  e2e4e16f8ccd_align_market_enum.py
backend/: api.py  cache.py  config.py  dependencies.py  litellm_config.yaml  main.py
backend/agents/: __init__.py  base.py  chairperson.py  fundamental.py  risk_manager.py  sentiment.py  technical.py
backend/ai/: __init__.py  workflow.py
backend/api/: __init__.py  comparison.py  performance.py  routes.py  websocket.py
backend/auth/: dependencies.py  jwt.py
backend/backtest/: __init__.py  engine.py
backend/core/: __init__.py  cache.py  enums.py  exceptions.py  logging.py  security.py  settings.py
backend/dao/: __init__.py  alerts.py  analysis.py  backtesting.py  base.py  database.py  models.py  performance.py  portfolio.py  user.py
backend/data/: __init__.py  historical.py
backend/db/: __init__.py  database.py
backend/docker/: Dockerfile.dev  Dockerfile.prod
backend/graph/: __init__.py  workflow.py
backend/jobs/: alert_checker.py  outcome_tracker.py  scheduled_analyzer.py  scheduler.py
backend/services/: __init__.py  base.py  dependencies.py  email.py  exceptions.py  outcome_service.py
backend/shared/: __init__.py
backend/state/: agent_state.py  enums.py
backend/tools/: __init__.py  market_data.py  relative_strength.py  search.py  stock_search.py  technical_indicators.py
docker/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml
docker/postgres/: init-multiple-dbs.sh
docs/: ARCHITECTURE.md  BACKTESTING.md  CONTRIBUTING.md  DEPENDENCY_INJECTION.md  DEVELOPMENT.md  IMPLEMENTATION_STATUS.md  INTEGRATION_TEST_CHECKLIST.md  PHASE2_IMPLEMENTATION.md  PHASE3_COMPLETE.md  PHASE3_IMPLEMENTATION.md  PHASE3_SUMMARY.md  RATE_LIMITING.md  REFACTORING_SUMMARY.md  SECURITY.md  SERVICES.md  getting-started.md  usage-guide.md
docs/plans/: 2025-02-10-ci-cd-workflows-setup.md  2026-02-02-boardroom-design.md  2026-02-02-boardroom-implementation.md  2026-02-18-test-coverage-80pct.md  2026-02-22-quick-wins-design.md  2026-02-22-quick-wins.md  2026-02-23-pipeline-parallel-redesign-plan.md  phase-quick-wins.md  (+8 more)
frontend/: .eslintrc.cjs  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  railway.json  tsconfig.json  tsconfig.tsbuildinfo
tests/: conftest.py  test_api.py  test_cache.py  test_chairperson.py  test_dao.py  test_fundamental_agent.py  test_llm.py  test_risk_manager.py  test_search.py  test_sentiment_agent.py  test_state.py  test_technical_agent.py  test_technical_indicators.py  test_tools.py  test_workflow.py
(+361 files in other folders)
